ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: fast-api-ingress
    namespace: fast
spec:
  defaultBackend:
    service:
     name: fast-api-service
     port:
       number: 8181
